--- a/style/admin_panel.css
+++ b/style/admin_panel.css
@@ -1,3 +1,5 @@
+/*CSS de la page ( admin.php )*/
+
 body {
     background-color: rgb(126, 233, 224);
 }
@@ -54,4 +56,38 @@ header {
     justify-content: space-around;
     padding: 30px;
     font-family: 'Signika Negative', sans-serif; 
+}
+
+#div-accueil, #div-para, #div-compte, #div-conf {
+    margin-right: 300px;
+}
+
+.div-footer {
+    margin-top: 10px;
+}
+
+/*CSS du la page ( admin_updateArticle.php )*/
+
+.div-text {
+    margin-top: 40px;
+}
+
+#txt-content {
+    margin-top: 20px;
+    resize: none;
+}
+
+#txt-title {
+    resize: none;
+}
+
+.update-art {
+    margin-top: 25px;
+    margin-bottom: 35px;
+    font-size: 20px;
+}
+
+.delete-art {
+    font-size: 20px;
+    margin-bottom: 10px;
 }
