--- a/style/content.css
+++ b/style/content.css
@@ -6,10 +6,10 @@ body {
     border-bottom: 1px solid;
     width: 100%;
     height: auto;
+    margin-top: 20px;
 }
 
 .comment {
-    border: 1px solid;
     width: auto;
     height: auto;
     margin-top: 10px;
@@ -29,4 +29,26 @@ body {
 #btn-deco {
     margin-top: 10px;
     margin-left: 10px;
+}
+
+.footer {
+    border: solid 2px white;
+    background: rgba(29, 27, 27, 0.911);
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 40px;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    padding: 30px;
+    font-family: 'Signika Negative', sans-serif; 
+}
+
+#div-accueil, #div-para, #div-compte, #div-conf {
+    margin-right: 300px;
+}
+
+.div-footer {
+    margin-top: 10px;
 }
