--- a/style/blog_NonConnecter.css
+++ b/style/blog_NonConnecter.css
@@ -1,10 +1,11 @@
 body {
-    background-color: rgb(126, 233, 224);
+    background-color: #a6be99;
 }
 
 .en-tete {
     height: 150px;
     border-bottom: 1px solid;
+    background-color: #c9b093;
 }
 
 .middle {
@@ -43,12 +44,18 @@ body {
 #btnc {
     height: 35px;
     border-radius: 5px;
+    cursor: pointer;
+    background-color: rgb(96, 0, 185);
+    color: white;
 }
 
 #btni {
     margin-top: 10px;
     height: 35px;
     border-radius: 5px;
+    cursor: pointer;
+    background-color: rgb(96, 0, 185);
+    color: white;
 }
 
 .div_articles {
