--- a/style/connexion.css
+++ b/style/connexion.css
@@ -3,7 +3,6 @@ body {
 }
 
 .connect {
-    /*Taille,, bordure, centrage*/
     border: 2px solid;
     border-radius: 25px;
     height: 500px;
@@ -13,8 +12,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /*Couleur*/
-    background: linear-gradient(rgb(147, 209, 196), rgb(160, 111, 113));
+    background: linear-gradient(rgb(147, 209, 196), rgb(201, 155, 157));
 }
 
 .mail {
@@ -41,25 +39,24 @@ body {
     margin-top: 60px;
 }
 
-#button {
+#btn-connect {
     height: 40px;
     width: 110px;
     border-radius: 5px;
+    border: none;
+    overflow: hidden;
+    cursor: pointer;
 }
 
 #btn_blog {
     margin-top: 15px;
     width: 100px;
     height: 35px;
+    cursor: pointer;
 }
 
 #btn_inscription {
     width: 100px;
     height: 30px;
-}
-
-#btn-admin {
-    margin-top: 15px;
-    height: 40px;
-    width: 100px;
+    cursor: pointer;
 }
