--- a/style/content.css
+++ b/style/content.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(126, 233, 224);
+    background-color: #a6be99;
 }
 
 .content {
@@ -20,10 +20,14 @@ body {
 }
 
 #btn_ajt {
-    width: 170px;
-    height: 30px;
-    margin-top: 5px;
-    margin-left: 5px;
+    border-radius: 5px;
+    border: none;
+    height: 35px;
+    margin-top: 10px;
+    margin-left: 20px;
+    cursor: pointer;
+    background-color: rgb(96, 0, 185);
+    color: white;
 }
 
 #btn-deco {
